# torii-rs

./: .cargo-workspace.toml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASING.md  docker-compose.yaml  release.sh
.augment/commands/: speckit.plan.md
.augment/rules/: specify-rules.md
.config/: nextest.toml
.cursor/rules/: rfcs.mdc  sqlx.mdc  torii.mdc
.github/: dependabot.yaml
.github/workflows/: ci.yaml  docs.yaml
.opencode/agent/: owasp-auth-security-auditor.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
docs/: .gitignore  book.toml  package-lock.json  package.json  wrangler.jsonc
docs/rfcs/: login-guard.md
docs/src/: SUMMARY.md  axum-integration.md  getting-started.md  introduction.md  sessions.md
docs/src/core-concepts/: index.md
examples/axum-example/: Cargo.toml  README.md
examples/axum-example/src/: main.rs
examples/axum-sqlite-password/: Cargo.toml  README.md
examples/axum-sqlite-password/src/: main.rs
examples/todos/: Cargo.toml  README.md
examples/todos/src/: main.rs  routes.rs  templates.rs
examples/todos/templates/: base.html  index.html  sign_in.html  sign_up.html  todo.partial.html
flows/: login-magic-link.md  login-password.md
rfcs/: 001-plugin-events.md  002-plugin-interfaces.md  003-mongodb-storage.md  004-postgresql-storage.md  005-mysql-storage.md  006-redis-storage.md  007-memcached-storage.md  008-dynamodb-storage.md
specs/001-multi-tenancy/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
torii/: Cargo.toml  README.md
torii-auth-email/: Cargo.toml  README.md
torii-auth-email/examples/: README.md  email_password.rs
torii-auth-email/src/: lib.rs
torii-auth-email/src/migrations/: mod.rs
torii-auth-magic-link/: Cargo.toml
torii-auth-magic-link/examples/: README.md  magic-link.rs  magic_link.rs
torii-auth-magic-link/src/: lib.rs
torii-auth-oauth/: Cargo.toml  README.md
torii-auth-oauth/examples/github/: README.md  github.rs
torii-auth-oauth/examples/google/: README.md  google.rs
torii-auth-oauth/src/: lib.rs
torii-auth-oauth/src/providers/: github.rs  google.rs  mod.rs
torii-auth-oidc/: Cargo.toml  README.md
torii-auth-oidc/src/: lib.rs
torii-auth-passkey/: Cargo.toml
torii-auth-passkey/examples/: passkey.rs
torii-auth-passkey/src/: lib.rs
torii-auth-password/: Cargo.toml  README.md
torii-auth-password/examples/: README.md  password.rs
torii-auth-password/src/: lib.rs
torii-axum/: Cargo.toml
torii-axum/src/: error.rs  extractors.rs  lib.rs  middleware.rs  routes.rs  types.rs
torii-core/: Cargo.toml  README.md
torii-core/src/: auth.rs  crypto.rs  error.rs  events.rs  id.rs  invitation.rs  lib.rs  migration.rs  plugin.rs  session.rs  storage.rs  tenant.rs  user.rs  validation.rs
torii-core/src/error/: mod.rs  utilities.rs
torii-core/src/migrations/: mod.rs
torii-core/src/repositories/: adapter.rs  brute_force.rs  invitation.rs  magic_link.rs  mod.rs  oauth.rs  passkey.rs  password.rs  session.rs  token.rs  user.rs
torii-core/src/services/: brute_force.rs  email_verification.rs  invitation.rs  magic_link.rs  mailer.rs  mod.rs  oauth.rs  passkey.rs  password.rs  password_reset.rs  session.rs  user.rs
torii-core/src/session/: jwt.rs  mod.rs  opaque.rs  provider.rs
torii-core/src/storage/: mod.rs
torii-mailer/: Cargo.toml  README.md
torii-mailer/src/: config.rs  email.rs  email_types.rs  error.rs  lib.rs  mailer.rs
torii-mailer/src/templates/: auth_templates.rs  engine.rs  mod.rs
torii-mailer/src/transports/: file.rs  mod.rs  sendmail.rs  smtp.rs
torii-migration/: Cargo.toml  README.md
torii-migration/src/: lib.rs
torii-storage-postgres/: Cargo.toml  README.md
torii-storage-postgres/migrations/: 20250202171521_create_user_table.down.sql  20250202171521_create_user_table.up.sql  20250202171544_create_session_table.down.sql  20250202171544_create_session_table.up.sql  20250202180416_create_oidc_table.down.sql  20250202180416_create_oidc_table.up.sql
torii-storage-postgres/src/: brute_force.rs  lib.rs  magic_link.rs  oauth.rs  passkey.rs  password.rs  session.rs
torii-storage-postgres/src/migrations/: mod.rs
torii-storage-postgres/src/repositories/: invitation.rs  mod.rs  oauth.rs  passkey.rs  password.rs  session.rs  token.rs  user.rs
torii-storage-seaorm/: Cargo.toml  README.md
torii-storage-seaorm/src/: lib.rs  magic_link.rs  oauth.rs  passkey.rs  password.rs  session.rs  token.rs  user.rs
torii-storage-seaorm/src/entities/: failed_login_attempt.rs  magic_link.rs  mod.rs  oauth.rs  passkey.rs  passkey_challenge.rs  pkce_verifier.rs  secure_token.rs  session.rs  user.rs
torii-storage-seaorm/src/migrations/: m20250304_000001_create_user_table.rs  m20250304_000002_create_session_table.rs  m20250304_000003_create_oauth_table.rs  m20250304_000004_create_passkeys_table.rs  m20250304_000005_create_magic_links.rs  m20250304_000006_create_secure_tokens.rs  m20250304_000007_create_failed_login_attempts.rs  m20250304_000008_add_locked_at_to_users.rs  mod.rs
torii-storage-seaorm/src/repositories/: brute_force.rs  invitation.rs  magic_link.rs  mod.rs  oauth.rs  passkey.rs  password.rs  session.rs  token.rs  user.rs
torii-storage-sqlite/: Cargo.toml  README.md
torii-storage-sqlite/migrations/: 20250202171521_create_user_table.up.sql  20250202171544_create_session_table.down.sql  20250202171544_create_session_table.up.sql  20250202180416_create_oidc_table.down.sql  20250202180416_create_oidc_table.up.sql
torii-storage-sqlite/src/: lib.rs  magic_link.rs  oauth.rs  passkey.rs  password.rs  session.rs
torii-storage-sqlite/src/migrations/: mod.rs
torii-storage-sqlite/src/repositories/: brute_force.rs  invitation.rs  magic_link.rs  mod.rs  oauth.rs  passkey.rs  password.rs  session.rs  token.rs  user.rs
torii/src/: builder.rs  lib.rs  main.rs
torii/tests/: builder.rs  integration_test.rs  invitation.rs  jwt_sessions.rs  magic_link.rs  password.rs  postgres.rs  seaorm.rs  sqlite.rs
(+24 files in other folders)
