[workspace]
members = [
    # Core
    "torii",
    "torii-core",
    # Auth plugins
    "torii-auth-password",
    "torii-auth-oauth",
    "torii-auth-passkey",
    # SQL Storage plugins
    "torii-storage-sqlite",
    "torii-storage-postgres",
    # Migration
    "torii-migration",
    # Examples
    "examples/todos",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/cmackenzie1/torii"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
regex = "1"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid"] }
