[workspace]
# This is the list of crates in the workspace, keep in order of leaf to root. 
members = [
    "torii-core",
    "torii-migration",
    "torii-storage-sqlite",
    "torii-storage-postgres",
    "torii-auth-password",
    "torii-auth-oauth",
    "torii-auth-passkey",
    "torii",
    "examples/todos",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/cmackenzie1/torii"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
futures = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid"] }
