[workspace]
# This is the list of crates in the workspace, ordered by dependency hierarchy (leaf to root).
# Publishing order: torii-core → torii-migration → storage/auth crates → torii
members = [
    # Level 1: Core (no internal dependencies)
    "torii-core",
    
    # Level 2: Migration (depends on torii-core)
    "torii-migration",
    
    # Level 3: Storage backends (depend on torii-core and torii-migration)
    "torii-storage-sqlite",
    "torii-storage-postgres",
    "torii-storage-seaorm",
    
    # Level 4: Main library (depends on all above)
    "torii",
    
    # Examples (not published)
    "examples/todos",
]
resolver = "3"

[workspace.package]
edition = "2024"
repository = "https://github.com/cmackenzie1/torii-rs"
license = "MIT"

[workspace.dependencies]
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6.1"
jsonwebtoken = "9.3"
rand = "0.9"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "chrono", "uuid"] }
