[package]
name = "torii-auth-email"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core" }
async-trait.workspace = true
sqlx.workspace = true
thiserror.workspace = true
password-auth = { version = "1", features = ["argon2"] }
