[package]
name = "torii-auth-magic-link"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.2" }
thiserror.workspace = true
rand = "0.9"
base64 = "0.22"
chrono.workspace = true

[dev-dependencies]
torii-storage-sqlite = { path = "../torii-storage-sqlite", version = "0.2" }

async-trait.workspace = true
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true


[[example]]
name = "magic-link"
path = "examples/magic_link.rs"
