[package]
name = "torii-auth-magic-link"
description = "Magic Link authentication plugin for Torii"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.3.0" }
base64 = "0.22"
chrono.workspace = true
rand = "0.9"
thiserror.workspace = true

[dev-dependencies]
torii-storage-sqlite = { path = "../torii-storage-sqlite" }

axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true


[[example]]
name = "magic-link"
path = "examples/magic-link.rs"
