[package]
name = "torii-auth-oauth"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core" }

oauth2 = { version = "5.0.0" }
reqwest = { version = "0.12", features = ["json"] }
chrono.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
uuid.workspace = true
torii-storage-sqlite = { path = "../torii-storage-sqlite", version = "0.1.0" }

[dev-dependencies]
tokio.workspace = true
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
tracing-subscriber.workspace = true

[[example]]
name = "google"
path = "examples/google/google.rs"

[[example]]
name = "github"
path = "examples/github/github.rs"
