[package]
name = "torii-auth-oauth"
description = "OAuth authentication plugin for the torii authentication ecosystem"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.3.0" }

oauth2 = { version = "5.0.0" }
reqwest = { version = "0.12", features = ["json"] }
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
sqlx = { workspace = true, features = ["runtime-tokio-rustls", "sqlite"] }
tokio.workspace = true
torii-storage-sqlite = { path = "../torii-storage-sqlite" }                # don't specify version in dev-dependencies
tracing-subscriber.workspace = true

[[example]]
name = "google"
path = "examples/google/google.rs"

[[example]]
name = "github"
path = "examples/github/github.rs"
