[package]
name = "torii-auth-passkey"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core" }
async-trait.workspace = true
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation",
] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
