[package]
name = "torii-auth-passkey"
description = "Passkey authentication plugin for the torii authentication ecosystem"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.3.0" }

async-trait.workspace = true
chrono.workspace = true
webauthn-rs = { version = "0.5.1", features = [
    "danger-allow-state-serialisation",
] }
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
uuid = { workspace = true, features = ["v4", "serde"] }

[dev-dependencies]
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
sqlx.workspace = true
tokio.workspace = true
torii-storage-sqlite = { path = "../torii-storage-sqlite" } # don't specify version in dev-dependencies
tracing-subscriber.workspace = true

[[example]]
name = "passkey"
path = "examples/passkey.rs"
