[package]
name = "torii-auth-password"
description = "Password authentication plugin for the torii authentication ecosystem"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.3.0" }
chrono.workspace = true
password-auth = { version = "1", features = ["argon2"] }
regex.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait.workspace = true
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }
serde_json.workspace = true
serde.workspace = true
sqlx.workspace = true
tokio.workspace = true
torii-storage-sqlite = { path = "../torii-storage-sqlite" } # don't specify version in dev-dependencies
tracing-subscriber.workspace = true


[[example]]
name = "password"
path = "examples/password.rs"
