[package]
name = "torii-core"
description = "Core functionality for the torii authentication ecosystem"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
downcast-rs = "2.0.1"
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = []
