[package]
name = "torii-core"
description = "Core functionality for the torii authentication ecosystem"
version = "0.3.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
downcast-rs = "2.0.1"
jsonwebtoken.workspace = true
password-auth = "1.0.0"
rand.workspace = true
regex = "1.10.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true

[features]
default = []
