[package]
name = "torii-core"
description = "Core functionality for the torii authentication ecosystem"
version = "0.5.2"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
dashmap.workspace = true
downcast-rs = "2.0.1"
jsonwebtoken.workspace = true
password-auth = "1.0.0"
sha2 = "0.10"
subtle = "2.5"
hex = "0.4"
rand.workspace = true
regex = "1.10.2"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
tokio.workspace = true
b58 = "0.1.2"

# Optional mailer integration
torii-mailer = { path = "../torii-mailer", version = "0.5.2", optional = true }
secrecy = "0.10.3"

[dev-dependencies]
tokio.workspace = true

[features]
default = []
mailer = ["dep:torii-mailer"]
