[package]
name = "torii-migration"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
torii-core = { path = "../torii-core", version = "0.2.0" }
async-trait.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["any"] }
thiserror.workspace = true
tracing.workspace = true
