[package]
name = "torii-migration"
description = "Migration utilities for the torii authentication ecosystem"
version = "0.3.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.3.0" }
async-trait.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["any"] }
thiserror.workspace = true
