[package]
name = "torii-storage-postgres"
version = "0.1.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.2.0" }
torii-migration = { path = "../torii-migration", version = "0.2.0" }
async-trait.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid"] }
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
rand = "0.9"
