[package]
name = "torii-storage-postgres"
description = "Postgres storage backend for the torii authentication ecosystem"
version = "0.3.1"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.3.1" }
torii-migration = { path = "../torii-migration", version = "0.3.1" }
async-trait.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
rand = "0.9"
