[package]
name = "torii-storage-postgres"
description = "Postgres storage backend for the torii authentication ecosystem"
version = "0.5.2"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.5.2" }
torii-migration = { path = "../torii-migration", version = "0.5.2" }
async-trait.workspace = true
base64.workspace = true
chrono.workspace = true
rand.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = ["postgres", "uuid", "json"] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
