[package]
name = "torii-storage-sqlite"
version = "0.2.0"
edition.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
torii-core = { path = "../torii-core", version = "0.2.0" }
torii-migration = { path = "../torii-migration", version = "0.2.0" }
async-trait.workspace = true
chrono.workspace = true
sqlx = { workspace = true, features = ["sqlite"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
tracing-subscriber.workspace = true
