[package]
name = "torii"
version = "0.5.3"
description = "A modular authentication ecosystem for Rust applications"
edition.workspace = true
repository.workspace = true
license.workspace = true

[package.metadata.docs.rs]
all-features = true # build docs with all features enabled

[dependencies]
torii-core = { path = "../torii-core", version = "0.5.2", default-features = false }
torii-storage-sqlite = { path = "../torii-storage-sqlite", version = "0.5.2", optional = true }
torii-storage-postgres = { path = "../torii-storage-postgres", version = "0.5.2", optional = true }
torii-storage-seaorm = { path = "../torii-storage-seaorm", version = "0.5.2", optional = true }
torii-mailer = { path = "../torii-mailer", version = "0.5.2", optional = true }

# Pool types for builder (re-exported from storage crates)
sqlx = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }

# dependencies
chrono.workspace = true     # TODO: Make this optional and expose std::time::Duration in APIs
tracing.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
testcontainers-modules = { version = "0.14.0", features = [
    "postgres",
    "mysql",
    "mariadb",
] }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true, features = ["sqlite", "runtime-tokio-rustls"] }

[features]
default = ["password", "sqlite"]

# storage backends
sqlite = ["dep:torii-storage-sqlite", "dep:sqlx", "sqlx/sqlite", "sqlx/runtime-tokio-rustls"]
postgres = ["dep:torii-storage-postgres", "dep:sqlx", "sqlx/postgres", "sqlx/runtime-tokio-rustls"]

# seaorm storage backends
seaorm-sqlite = ["dep:torii-storage-seaorm", "dep:sea-orm", "torii-storage-seaorm/sqlite"]
seaorm-postgres = ["dep:torii-storage-seaorm", "dep:sea-orm", "torii-storage-seaorm/postgres"]
seaorm-mysql = ["dep:torii-storage-seaorm", "dep:sea-orm", "torii-storage-seaorm/mysql"]
seaorm = [
    "dep:torii-storage-seaorm",
    "dep:sea-orm",
    "torii-storage-seaorm/sqlite",
    "torii-storage-seaorm/postgres",
    "torii-storage-seaorm/mysql",
]

# auth features (now implemented as services in torii-core)
password = []
oauth = []
passkey = []
magic-link = []

# mailer feature
mailer = ["dep:torii-mailer", "torii-core/mailer"]
