[package]
name = "axum-example"
version = "0.5.1"
edition = "2021"
publish = false

[dependencies]
torii = { path = "../../torii", features = [
    "password",
    "mailer",
    "magic-link",
    "seaorm-sqlite",
] }
torii-axum = { path = "../../torii-axum", features = ["password", "magic-link"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
