[package]
name = "axum-sqlite-password-example"
version = "0.4.0"
edition = "2021"
publish = false

[dependencies]
torii = { path = "../../torii", features = ["password"] }
torii-axum = { path = "../../torii-axum", features = ["password"] }
torii-storage-seaorm = { path = "../../torii-storage-seaorm", features = ["sqlite"] }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
