[package]
name = "torii-example-todos"
version = "0.1.1"
edition = "2021"
publish = false

[dependencies]
# torii
torii = { path = "../../torii", version = "0.2.2", features = [
    "password",
    "sqlite",
] }

# web server
askama = "0.12"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie"] }

# "stdlib"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v4", "v7"] }

# async/runtime
dashmap = "6.0"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
