[package]
name = "torii-example-todos"
version = "0.1.2"
edition = "2021"
publish = false

[dependencies]
# torii
torii = { path = "../../torii", version = "0.2.3", features = [
    "password",
    "seaorm-sqlite",
] }

# web server
askama = "0.13"
axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.10", features = ["cookie", "typed-header"] }

# "stdlib"
chrono = { version = "0.4.39", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v4", "v7"] }

# async/runtime
dashmap = "6.0"
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
tracing.workspace = true
